fix z-index issue with hidden mobile toggle

--- a/ui/src/components/hamburger.module.css
+++ b/ui/src/components/hamburger.module.css
@@ -5,6 +5,12 @@
   position: relative;
   display: inline-block;
   float: right;
+  z-index: auto;
+}
+@media (min-width: breakTablet){
+  .hamburgerWrapper{
+    z-index: -1;
+  }
 }
 
 .overlay{
